Fix spacing issue in protocol datatable [SCI-8108]

--- a/app/assets/stylesheets/protocols/index.scss
+++ b/app/assets/stylesheets/protocols/index.scss
@@ -20,6 +20,14 @@
       width: 100%;
 
       tbody {
+        td {
+          vertical-align: middle;
+        }
+
+        td:first-child {
+          padding-top: 4px;
+        }
+
         td:not(:first-child) {
           max-width: 30rem;
           overflow: hidden;
@@ -78,7 +86,7 @@
       }
 
       td:not(:first-child) {
-        padding: 14px 8px;
+        padding: 12px 8px;
       }
     }
 
